--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
   "version": 2,
-  "rewrites": [{"source": "/(.*)", "destination": "/api"}]
+  "builds": [
+    {
+      "src": "main.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "main.js"
+    }
+  ]
 }
