--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "!*/__tests__"
   ],
   "dependencies": {
+    "@loopback/authentication": "^11.0.12",
+    "@loopback/authentication-jwt": "^0.15.12",
     "@loopback/boot": "^7.0.7",
     "@loopback/core": "^6.1.4",
     "@loopback/repository": "^7.0.11",
