--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@loopback/service-proxy": "^7.0.7",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "arduino-cli": "^0.37.0",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
